index and gallery

--- a/csit-ibelong/pages/index.html
+++ b/csit-ibelong/pages/index.html
@@ -18,18 +18,42 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <!-- TODO: Add a link to your second page (gallery) into the navigation bar -->
-            <li><a href=""></a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
 
         <!-- Team Profiles -->
         <!-- Page Heading -->
         <div style="text-align:center">
-            <h2>Our Image Gallery</h2>
+            <h2>Team Sneeze</h2>
             <p>Click on the images below for a larger view:</p>
         </div>
 
         <!-- Profile Gallery -->
         <!-- TODO: Add the source location of each of your images -->
+        <div class="gallery">
+            <a target="_blank" href="../img/android-me.jpg">
+                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            </a>
+            <div class="desc">Add a description of yourself here</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="">
+                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            </a>
+            <div class="desc">Add a description of yourself here</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="../img/android-me.jpg">
+                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            </a>
+            <div class="desc">Add a description of yourself here</div>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="../img/android-me.jpg">
+                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            </a>
+            <div class="desc">Add a description of yourself here</div>
+        </div>
         <div class="gallery">
             <a target="_blank" href="../img/android-me.jpg">
                 <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
