putting the updated index.html

--- a/csit-ibelong/pages/index.html
+++ b/csit-ibelong/pages/index.html
@@ -31,38 +31,43 @@
         <!-- Profile Gallery -->
         <!-- TODO: Add the source location of each of your images -->
         <div class="gallery">
-            <a target="_blank" href="../img/android-me.jpg">
-                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            <a target="_blank" href="../img/IMG_2609-min.JPG">
+                <img src="../img/IMG_2609-min.JPG" alt="Cinque Terre" width="600" height="400">
             </a>
-            <div class="desc">Add a description of yourself here</div>
-
-
-            
+            <div class="desc">I am Nasima, I like  reading autobiographies and my favourite subject at school is math. Sometimes i don't like git giplaying sport. </div>
         </div>
         <div class="gallery">
             <a target="_blank" href="">
-                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+                    <a target="_blank" href="../img/IMG_2614-min.JPG">
+                <img src="../img/IMG_2614-min.JPG" alt="Cinque Terre" width="600" height="400">
             </a>
             <div class="desc">Add a description of yourself here</div>
         </div>
         <div class="gallery">
-            <a target="_blank" href="../img/android-me.jpg">
-                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            <a target="_blank" href="../img/IMG_2607-min.jpg">
+                <img src="../img/IMG_2607-min.jpg" alt="Cinque Terre" width="600" height="400">
             </a>
             <div class="desc">Add a description of yourself here</div>
         </div>
         <div class="gallery">
-            <a target="_blank" href="../img/android-me.jpg">
-                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            <a target="_blank" href="../img/IMG_2610-min.JPG">
+                <img src="../img/IMG_2610-min.JPG" alt="Cinque Terre" width="600" height="400">
             </a>
-            <div class="desc">Add a description of yourself here</div>
+            <div class="desc">Hi, i'm T. I like xbox-one games, in particular the Forza series; I aslo like anime my favourite would have to be Cupid's Chocolates. Something that i don't like would have to be hvaing no internet connection which leads to me not being able to watch my anime.</div>
         </div>
         <div class="gallery">
-            <a target="_blank" href="../img/android-me.jpg">
-                <img src="../img/android-me.jpg" alt="Cinque Terre" width="600" height="400">
+            <a target="_blank" href="../img/IMG_2611-min.JPG">
+                <img src="../img/IMG_2611-min.JPG" alt="Cinque Terre" width="600" height="400">
             </a>
-            <div class="desc">Add a description of yourself here</div>
+            <div class="desc">Hello, I'm Kiet. I enjoy drawing and art related things. Things I dislike are just having bad customers at my work.</div>
         </div>
+    </div>
+    <div class="gallery">
+        <a target="_blank" href="../img/IMG_2612-min.JPG">
+            <img src="../img/IMG_2612-min.JPG" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of yourself here</div>
+    </div>
 
     </body>
 </html>
