updated index.html :wq!
:q!
git commit -m test
w8408819:Sneeze s2996134$ git commit -m test

--- a/csit-ibelong/pages/index.html
+++ b/csit-ibelong/pages/index.html
@@ -31,29 +31,37 @@
         <!-- Profile Gallery -->
         <!-- TODO: Add the source location of each of your images -->
         <div class="gallery">
+                <a target="_blank" href="../img/IMG_2615-min.JPG">
+                    <img src="../img/IMG_2615-min.JPG" alt="Cinque Terre" width="600" height="400">
+                </a>
+                <div class="desc">Hi we are team Sneeze. </div>
+            </div>
+        <div class="gallery">
             <a target="_blank" href="../img/IMG_2609-min.JPG">
-                <img src="../img/IMG_2609-min.JPG" alt="Cinque Terre" width="600" height="400">
+                <img src="../img/IMG_2609-min.JPG" alt="Cinque Terre" width="1200" height="600">
             </a>
-            <div class="desc">I am Nasima, I like  reading autobiographies and my favourite subject at school is math. Sometimes i don't like git giplaying sport. </div>
+            <div class="desc">Hi I am Nasima, I like  reading autobiographies  and my favourite subject at school is math. Sometimes i don't like git giplaying sport. </div>
         </div>
         <div class="gallery">
             <a target="_blank" href="">
                     <a target="_blank" href="../img/IMG_2614-min.JPG">
                 <img src="../img/IMG_2614-min.JPG" alt="Cinque Terre" width="600" height="400">
             </a>
-            <div class="desc">Add a description of yourself here</div>
+            <div class="desc">hi im julian i very much like doing lots of physical activity especially badminton and i have intrest in most things that just come to me. i very dislike basketball but other then that i dont have any other dislikes for anything
+
+            </div>
         </div>
         <div class="gallery">
             <a target="_blank" href="../img/IMG_2607-min.jpg">
                 <img src="../img/IMG_2607-min.jpg" alt="Cinque Terre" width="600" height="400">
             </a>
-            <div class="desc">Add a description of yourself here</div>
+            <div class="desc">Hi, i'm Haqiq I enjoy k-pop music and my favourite subject at school is science. I very much am not interested in math  </div>
         </div>
         <div class="gallery">
             <a target="_blank" href="../img/IMG_2610-min.JPG">
                 <img src="../img/IMG_2610-min.JPG" alt="Cinque Terre" width="600" height="400">
             </a>
-            <div class="desc">Hi, i'm T. I like xbox-one games, in particular the Forza series; I aslo like anime my favourite would have to be Cupid's Chocolates. Something that i don't like would have to be hvaing no internet connection which leads to me not being able to watch my anime.</div>
+            <div class="desc">Hi, i'm T. I like xbox-one games, in particular the Forza series; I aslo like anime my favourite would have to be Cupid's Chocolates. Something that i don't like would have to be hvaing no internet connection which means i don't get to watch my anime.</div>
         </div>
         <div class="gallery">
             <a target="_blank" href="../img/IMG_2611-min.JPG">
@@ -66,7 +74,7 @@
         <a target="_blank" href="../img/IMG_2612-min.JPG">
             <img src="../img/IMG_2612-min.JPG" alt="Cinque Terre" width="600" height="400">
         </a>
-        <div class="desc">Add a description of yourself here</div>
+        <div class="desc">Hi I'm Gabe and I like computers and anime and I find English boring</div>
     </div>
 
     </body>
